--- a/example.env
+++ b/example.env
@@ -1,1 +1,3 @@
+# When cloning the repository, this file needs copying to .env
+# and sensitive information such as DB passwords adding to it.
 CLIENT_HOST_PORT=8080
