Fix api location

--- a/client/.graphqlconfig
+++ b/client/.graphqlconfig
@@ -4,7 +4,7 @@
       "schemaPath": "schema.graphql",
       "extensions": {
         "endpoints": {
-          "default": "http://graphql-node-blueprint-api:3000/graphql"
+          "default": "http://gym-api:3000/graphql"
         }
       } 
     }
