--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-relay": "^5.0.0",
+    "react-responsive-modal": "^4.0.1",
     "react-router-dom": "^5.0.1"
   },
   "devDependencies": {
