--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@testing-library/react": "^8.0.1",
+    "@testing-library/user-event": "^4.2.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-relay": "^5.0.0",
     "core-js": "^2.6.9",
