--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.1",
+    "graphql-iso-date": "^3.6.1",
     "mongoose": "^5.5.14"
   },
   "devDependencies": {
