--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,5 +51,19 @@ services:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - mongo-data:/data/db
 
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:${MONGO_EXPRESS_PORT}
+    volumes:
+      - mongo-data:/data/db
+    links:
+      - mongo:mongo
+    environment:
+      - ME_CONFIG_MONGODB_ADMINUSERNAME=${MONGO_ROOT_USERNAME}
+      - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_ROOT_PASSWORD}
+      - ME_CONFIG_MONGODB_SERVER=mongo
+
 volumes:
   mongo-data:      
